// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryListItem should render and match snapshot 1`] = `
<CategoryListItemstyles__Row>
  <CategoryListItemstyles__StyledLink
    to="/augsburg/de/willkommen"
  >
    <CategoryListItemstyles__CategoryThumbnail
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <CategoryListItemstyles__CategoryCaption
      search=""
    >
      Willkommen
    </CategoryListItemstyles__CategoryCaption>
  </CategoryListItemstyles__StyledLink>
  <div
    key="5234"
  >
    <CategoryListItemstyles__StyledLink
      to="/augsburg/de/test"
    >
      <CategoryListItemstyles__CategoryThumbnail
        src="https://cms.integreat-ap…03/Beratung-150x150.png"
      />
      <CategoryListItemstyles__CategoryCaption>
        Child
      </CategoryListItemstyles__CategoryCaption>
    </CategoryListItemstyles__StyledLink>
  </div>
</CategoryListItemstyles__Row>
`;

exports[`CategoryListItem should replace empty thumbnail 1`] = `
<CategoryListItemstyles__Row>
  <CategoryListItemstyles__StyledLink
    to=""
  >
    <CategoryListItemstyles__CategoryThumbnail
      src="test-file-stub"
    />
    <CategoryListItemstyles__CategoryCaption
      search=""
    >
      GotNoThumb :O
    </CategoryListItemstyles__CategoryCaption>
  </CategoryListItemstyles__StyledLink>
  <div
    key="42"
  >
    <CategoryListItemstyles__StyledLink
      to=""
    >
      <CategoryListItemstyles__CategoryThumbnail />
      <CategoryListItemstyles__CategoryCaption>
        GotNoThumb :O
      </CategoryListItemstyles__CategoryCaption>
    </CategoryListItemstyles__StyledLink>
  </div>
</CategoryListItemstyles__Row>
`;
